--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Soundfluence</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -14,9 +14,14 @@
     <![endif]-->
     <script type="text/javascript" src="//use.typekit.net/yve8xtw.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-45361594-1', 'soundfluence.com');
+    ga('send', 'pageview');
+  </script>
   </head>
   <body>
-
     <div class="container">
       <!-- Jumbotron -->
       <div class="jumbotron masthead">
@@ -29,7 +34,7 @@
               <input type="text" class="form-control" id="inputName" placeholder="Name">
             </div>
             <div class="form-group">
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="user.email" required>
             </div>
             <button type="submit" class="btn btn-lg btn-primary">SUBMIT</button>
           </form>
